# ocr-capture

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: bump-version.js
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs  utils.rs
src-tauri/src/commands/: capture.rs  ocr.rs
src/components/: CaptureCanvas.tsx  HeaderBar.tsx  HistoryModal.tsx  ResultPanel.tsx  SettingsModal.tsx  SnippingArea.tsx  StatusToast.tsx
src/hooks/: useTheme.ts  useTranslation.ts
src/i18n/: TranslationContext.tsx  translations.ts
src/lib/: image.ts  qr.ts
